# etnltk

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg
ethltk/: __init__.py
ethltk/amharic/: __init__.py  normalization.py  normalizers.py  preprocessing.py  tokenization.py  tokenizers.py
ethltk/amharic/data/: labialized_dict.json  short_forms_dict.json
ethltk/oromiffa/: preprocessors.py
src/ethltk/: __init__.py
src/ethltk/amharic/: __init__.py  normalization.py  preprocessing.py  tokenization.py
src/ethltk/amharic/data/: char_replacers_dict.json
src/ethltk/oromiffa/: __init__.py
src/etltk/: __init__.py
src/etltk/amharic/: __init__.py  normalization.py  tokenization.py
src/etltk/amharic/data/: char_replacers_dict.json
src/etltk/common/: doc.py
src/etltk/lang/am/: __init__.py  normalizer.py  preprocessing.py  punctuation.py  stop_words.py  utils.py
src/etltk/lang/am/data/: punct_replacers_dict.json  shortened_expansions_dict.json
src/etltk/oromiffa/: __init__.py
src/etltk/tokenize/: am.py  line.py  regexp.py
src/etnltk/: __init__.py
src/etnltk/common/: doc.py  ethiopic.py  preprocessing.py  utils.py
src/etnltk/lang/am/: __init__.py  mixins.py  normalizer.py  preprocessing.py  punctuation.py  stop_words.py
src/etnltk/lang/am/data/: shortened_expansions_dict.json
src/etnltk/lang/tg/: __init__.py  normalizer.py  preprocessing.py  punctuation.py  stop_words.py
src/etnltk/lang/tg/data/: char_replacers_dict.json  labialized_dict.json  punct_replacers_dict.json  shortened_expansions_dict.json
src/etnltk/tokenize/: am.py  line.py  regexp.py  space.py  tg.py
