[metadata]
name = ethltk
version = 0.0.10
author = Robel Equbasilassie
author_email = robiki4life@gmail.com
description = Ethiopian Language NLP Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robikieq/ethiopian_language_toolkit.git
classifiers = 
    Programming Langauage :: Python :: 3
    License :: OS Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
inlude_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.json

[options.extras_require]
textsearch >= 0.0.21; TextSearch
emoji >= 1.7.0; Emoji