[metadata]
name = etltk
version = 0.0.22
author = Robel Equbasilassie
author_email = robiki4life@gmail.com
description = Ethiopian Language NLP Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robikieq/ethiopian_language_toolkit.git
keywords = ['nlp', 'ethiopic', 'amharic', 'tokenizing', 'preprocessing', 'text-analytics']
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
inlude_package_data = True
install_requires =
    textsearch >= 0.0.21
    emoji >= 1.7.0

[options.packages.find]
where = src

[options.package_data]
* = *.json